# QuatBot

./: .clang-format  .git-blame-ignore-revs  .gitignore  CHANGES  CMakeLists.txt  CONTRIBUTING.md  README.md  USER.md
LICENSES/: BSD-2-Clause.txt
src/: coffee.cpp  coffee.h  command.cpp  command.h  dumpbot.cpp  dumpbot.h  dumper.cpp  log_impl.cpp  log_impl.h  logger.cpp  logger.h  main.cpp  main_dumper.cpp  meeting.cpp  meeting.h  quatbot.cpp  quatbot.h  watcher.cpp  watcher.h
